  gomory cut separator on miplib/dcmulti.mps)
- fixed documentation of CONSLOCK-method (missing parameter "scip" in SCIPaddVarLocks())
- included missing "objrelax.h" in includes of objscip.h
- fixed bug that presolving time is not counted to solving time, if presolving is called explicitly with SCIPpresolve()
- fixed bug where presolving fixings are counted even if the variable was already fixed

known bugs:
- after a resolve and further preprocessing, existing primal solutions may get corrupted due to aggregations or
  fixings that are possible due to the primal bound (given by the best solution)


SCIP version 0.78
=================

interface:
- new method SCIPvarIsInLP()
- new methods SCIPgetLPColumnObjval() and SCIPgetLPLooseObjval()
- new method SCIPcalcIntegralScalar() with arbitrary array of Real values
- new plugin class for relaxators (external relaxations, that can be used in parallel with LP relaxations)
- if more than one result code applies to a plugin's execution, it should return the one that is higher in the
  call's documentation list
- new method SCIPaddCoefKnapsack() in knapsack constraint handler
- removed SCIPisFeasible(); use !SCIPisFeasNegative() instead
- methods SCIPisIntegral(), SCIPisFracIntegral(), SCIPfloor(), SCIPceil(), and SCIPfrac() don't use the
  feasibility tolerance anymore (default: 1e-06); instead, they are using epsilon (default: 1e-09);
  instead, for handling integrality of a variable "in feasibility tolerances", new methods SCIPisFeasIntegral(),
  SCIPisFeasFracIntegral(), SCIPfeasFloor(), SCIPfeasCeil(), and SCIPfeasFrac() should be used
- new method SCIPisScalingIntegral() to check, whether the scaling of a value would lead to an integral value,
  measured against epsilon which is also scaled by the same scalar
- new methods SCIPgetRealarrayMinIdx(), SCIPgetRealarrayMaxIdx(), SCIPgetIntarrayMinIdx(), SCIPgetIntarrayMaxIdx(),